<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/menu_item_main" />

        <item
            android:id="@+id/nav_list"
            android:title="@string/menu_item_list" />

        <item
            android:id="@+id/nav_my_device"
            android:title="@string/menu_item_my_devices"/>

        <item
            android:id="@+id/nav_equals"
            android:title="@string/menu_item_equals"/>

        <item
            android:id="@+id/nav_visit_page"
            android:title="@string/menu_item_visit_page"/>

        <item
            android:id="@+id/nav_about_program"
            android:title="@string/menu_item_about_program"/>

    </group>
</menu>
